--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "space-blower",
   "description": "blow shit up",
   "version": "0.1.0",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.4.5"
